<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/textview_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/newtask_textview_enterTaskTitle"/>
    <EditText
        android:id="@+id/edittext_newtask_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_title"
        android:textColor="@color/edittext_textColor"
        android:textColorHint="@color/edittext_hintColor"
        android:background="@color/edittext_backgroundColor"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/newtask_edittext_enterTaskTitle_hint"/>
    <TextView
        android:id="@+id/textview_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_title"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/newtask_textview_enterTaskSummary"/>
    <EditText
        android:id="@+id/edittext_newtask_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_summary"
        android:textColor="@color/edittext_textColor"
        android:textColorHint="@color/edittext_hintColor"
        android:background="@color/edittext_backgroundColor"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/newtask_textview_enterTaskSummary_hint"/>
    <TextView
        android:id="@+id/textview_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_summary"
        android:textSize="@dimen/titleTextSize"
        android:text="@string/newtask_textview_enterTaskImportance"/>
    <EditText
        android:id="@+id/edittext_newtask_importance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_newtask_importance"
        android:textColor="@color/edittext_textColor"
        android:textColorHint="@color/edittext_hintColor"
        android:background="@color/edittext_backgroundColor"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/newtask_edittext_enterTaskImportance_hint"/>
    <Button
        android:id="@+id/button_newtask_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_newtask_importance"
        android:layout_centerHorizontal="true"
        android:text="@string/newtask_savetask"
        android:textAllCaps="false"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_below="@id/button_newtask_save">
        <TextView
            android:id="@+id/textview_newtask_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrollvew_noTaskText"/>
    </ScrollView>
</RelativeLayout>